# cpu-emul

./: .clang-format  .gitignore  CMakeLists.txt  README.md  coverage.sh  flake.nix  launch.json  run.sh
examples/: factorial_loop.pasm  factorial_recursion.pasm  fib_loop.pasm  fib_no_cycle.pasm  fib_recursion.pasm  test.pasm
src/: Executor.cpp  Executor.hpp  FileParser.cpp  FileParser.hpp  RuntimeContext.cpp  RuntimeContext.hpp  Singleton.hpp  cpu-emul.cpp  cpu-emul.hpp  main.cpp
src/commands/: AddCommand.hpp  ArithmeticCommandBase.hpp  BeginCommand.hpp  BeginCommand.hpp.autosave  CallCommand.hpp  Command.cpp  Command.hpp  CommandBase.cpp  CommandBase.hpp  Commands.hpp  DivCommand.hpp  EndCommand.hpp  InCommand.hpp  JaCommand.hpp  JaeCommand.hpp  JbCommand.hpp  JbeCommand.hpp  JeqCommand.hpp  JmpCommand.hpp  JmpCommandBase.hpp  JneCommand.hpp  MulCommand.hpp  OutCommand.hpp  OutrCommand.hpp  PopCommand.hpp  PoprCommand.hpp  PushCommand.hpp  PushrCommand.hpp  RetCommand.hpp  SecretCommand.hpp  SubCommand.hpp
